--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,23 +1,52 @@
 .navigation {
-    margin: 26px 0;
+  ul {
     display: flex;
-  
+    justify-content: space-around;
+    width: 60%;
+    margin: 30px auto;
+
     a {
-      margin: 10px;
+      text-decoration: none;
       padding: 10px;
-      border-radius: 4px;
-      position: relative;
+
+      li {
+        color: $color-1;
+        transition: 0.2s;
+        cursor: pointer;
+
+        &:hover {
+          color: $color-3;
+        }
+      }
     }
+
     .nav-active {
+      position: relative;
+
       &::after {
         content: "";
-        width: 85%;
-        height: 5px;
+        height: 4px;
+        width: 0;
         background: $color-1;
         position: absolute;
-        bottom: 1px;
+        border-radius: 10px;
+        bottom: 0px;
         left: 50%;
         transform: translateX(-50%);
+        -webkit-animation: anim 0.3s ease forwards;
+        animation: anim 0.6s ease forwards;
+
+        @-webkit-keyframes anim {
+          to {
+            width: 100%;
+          }
+        }
+        @keyframes anim {
+          to {
+            width: 100%;
+          }
+        }
       }
     }
   }
+}
