--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,4 +2,4 @@
 @import "./components/navigation";
 @import "./components/logo";
 @import "./components/countries";
-@import "./components/card";
+@import "./pages/connect";
